@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-06-19T01:01:37Z",
+  "timestamp" : "2024-06-20T00:59:50Z",
   "count_outdated" : 1691,
   "uniques_outdated" : 937,
-  "count" : 1697,
-  "uniques" : 943,
+  "count" : 1699,
+  "uniques" : 945,
   "clones" : [
     {
       "timestamp": "2024-06-15T00:00:00Z",
@@ -25,6 +25,15 @@
     },
     {
       "timestamp": "2024-06-18T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 2, 2 ],
+      "count_decinc": [ 0, 2 ],
+      "uniques": 2,
+      "uniques_minmax": [ 2, 2 ],
+      "uniques_decinc": [ 0, 2 ]
+    },
+    {
+      "timestamp": "2024-06-19T00:00:00Z",
       "count": 2,
       "count_minmax": [ 2, 2 ],
       "count_decinc": [ 0, 2 ],
