@@ -1,6 +1,6 @@
 {
-  "count": 6,
-  "uniques": 5,
+  "count": 8,
+  "uniques": 6,
   "clones": [
     {
       "timestamp": "2024-06-15T00:00:00Z",
@@ -14,6 +14,11 @@
     },
     {
       "timestamp": "2024-06-18T00:00:00Z",
+      "count": 2,
+      "uniques": 2
+    },
+    {
+      "timestamp": "2024-06-19T00:00:00Z",
       "count": 2,
       "uniques": 2
     }
